# SolidDesigner

./: .gitmodules  AutoGenerateVsProject.bat  CMakeLists.txt  LICENSE  README.md  SolidDesignerForLinux.sh  copyDll.bat  copyDllToBuildDir.bat
Designer/: CMakeLists.txt
Designer/APP/: CMakeLists.txt  main.cpp
Designer/DB/: CMakeLists.txt
Designer/Interaction/: CMakeLists.txt
Designer/UI/: CMakeLists.txt
Designer/UI/AliceRobot/: AliceRobot.cpp  CMakeLists.txt
ToolChain/CMake/: BuildProject.js  UpdateProductProject.js
ToolChain/CMake/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
ToolChain/CMake/doc/cmake/html/_static/: documentation_options.js
ToolChain/CMake/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  (+88 more)
ToolChain/CMake/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
ToolChain/CMake/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_TYPE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FRAMEWORK_PATH.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INCLUDE_PATH.html  CMAKE_INSTALL_MODE.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_LIBRARY_PATH.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_PREFIX_PATH.html  CMAKE_PROGRAM_PATH.html  CMAKE_TOOLCHAIN_FILE.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_NO_TESTS_ACTION.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDAARCHS.html  (+24 more)
ToolChain/CMake/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 17 2022.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Visual Studio 8 2005.html  Visual Studio 9 2008.html  Watcom WMake.html  Xcode.html
ToolChain/CMake/doc/cmake/html/manual/: ccmake.1.html  cmake-buildsystem.7.html  cmake-commands.7.html  cmake-compile-features.7.html  cmake-configure-log.7.html  cmake-developer.7.html  cmake-env-variables.7.html  cmake-file-api.7.html  cmake-generator-expressions.7.html  cmake-generators.7.html  cmake-gui.1.html  cmake-language.7.html  cmake-modules.7.html  cmake-packages.7.html  cmake-policies.7.html  cmake-presets.7.html  cmake-properties.7.html  cmake-qt.7.html  cmake-server.7.html  cmake-toolchains.7.html  cmake-variables.7.html  cmake.1.html  cpack-generators.7.html  cpack.1.html  ctest.1.html
ToolChain/CMake/doc/cmake/html/module/: AddFileDependencies.html  AndroidTestUtilities.html  BundleUtilities.html  CMakeAddFortranSubdirectory.html  CMakeBackwardCompatibilityCXX.html  CMakeDependentOption.html  CMakeDetermineVSServicePack.html  CMakeExpandImportedTargets.html  CMakeFindDependencyMacro.html  CMakeFindFrameworks.html  CMakeFindPackageMode.html  CMakeForceCompiler.html  CMakeGraphVizOptions.html  CMakePackageConfigHelpers.html  CMakeParseArguments.html  CMakePrintHelpers.html  CMakePrintSystemInformation.html  CMakePushCheckState.html  CMakeVerifyManifest.html  CPack.html  CPackArchive.html  CPackBundle.html  CPackComponent.html  CPackCygwin.html  CPackDMG.html  CPackDeb.html  CPackFreeBSD.html  CPackIFW.html  CPackIFWConfigureFile.html  CPackNSIS.html  CPackNuGet.html  CPackProductBuild.html  CPackRPM.html  CPackWIX.html  CSharpUtilities.html  CTest.html  CTestCoverageCollectGCOV.html  CTestScriptMode.html  CTestUseLaunchers.html  CheckCCompilerFlag.html  (+229 more)
ToolChain/CMake/doc/cmake/html/policy/: CMP0000.html  CMP0001.html  CMP0002.html  CMP0003.html  CMP0004.html  CMP0005.html  CMP0006.html  CMP0007.html  CMP0008.html  CMP0009.html  CMP0010.html  CMP0011.html  CMP0012.html  CMP0013.html  CMP0014.html  CMP0015.html  CMP0016.html  CMP0017.html  CMP0018.html  CMP0019.html  CMP0020.html  (+131 more)
ToolChain/CMake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
ToolChain/CMake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+1299 files in other folders)
