##########################################################################################################
#--Date: 2021.03.10
#--Author:xu xu
#--Note:位于Designer,目的在于管理产品Designer
##########################################################################################################
message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Start Designer/UI~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")

message("产品Designer-UI dir is: ")
message("${PROJECT_SOURCE_DIR}")
add_subdirectory(AliceRobot)

message("~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~End Designer/UI~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~")













